# sia

./: ..gitignore.swp  .gitignore  .gitignore.save  .gitignore.save.1  Cargo.toml  LICENSE  README.md
deb_assets/: sia.desktop
src/: main.rs
